--- a/src/webui/_locales/tr/messages.json
+++ b/src/webui/_locales/tr/messages.json
@@ -112,12 +112,12 @@
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#split-tunnel#help-text": {
-        "message": "Bu seçenek etkinleştirildiğinde, ülkenizdeki sunuculara yapılan istekler Psiphon tarafından tünelden geçirilmez.",
-        "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
+        "message": "Bu seçenek etkinleştirildiğinde, bulunduğunuz ülkedeki sunuculara yapılan istekler Psiphon tarafından tünelden geçirilmez.",
+        "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled. 'Present country' is the country that the user is currently in -- i.e., they country they're connecting _from_ with Psiphon."
     },
     "settings#split-tunnel#reason": {
-        "message": "Ülkenizdeki web siteleri genellikle engellenmez. Bu nedenle bu seçeneğin etkinleştirilmesi bu sitelere daha hızlı erişim sağlayarak İSS veri kullanımını da azaltabilir.",
-        "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting."
+        "message": "Bulunduğunuz ülkedeki web siteleri genellikle engellenmez. Bu nedenle bu seçeneğin etkinleştirilmesi bu sitelere daha hızlı erişim sağlayarak İSS veri kullanımını da azaltabilir.",
+        "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting. 'Present country' is the country that the user is currently in -- i.e., they country they're connecting _from_ with Psiphon."
     },
     "settings#split-tunnel#enable-label": {
         "message": "Ülkenizdeki web siteleri için vekil sunucu kullanılmasın",
@@ -248,8 +248,8 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Sweden will be used."
     },
     "settings#egress-region#description": {
-        "message": "Bir çok ülkede Psiphon sunucuları bulunuyor. Ülkenize yakın bir Psiphon sunucusu seçmeniz daha iyi ağ bağlantısı sağlar ancak belirli bir ülkedeki web sitesi ve hizmetlerine erişmek istiyorsanız sanal olarak o ülkedeymiş gibi görünmek isteyebilirsiniz.",
-        "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value."
+        "message": "Bir çok ülkede Psiphon sunucuları bulunuyor. Bulunduğunuz ülkeye yakın bir Psiphon sunucusu seçmeniz daha iyi ağ bağlantısı sağlar ancak belirli bir ülkedeki web sitesi ve hizmetlerine erişmek istiyorsanız sanal olarak o ülkedeymiş gibi görünmek isteyebilirsiniz.",
+        "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. 'Present country' is the country that the user is currently in -- i.e., they country they're connecting _from_ with Psiphon."
     },
     "settings#egress-region#default": {
         "message": "Varsayılan <strong>“En Hızlı Ülke”</strong> seçeneği seçildiğinde, Psiphon otomatik olarak genellikle en iyi ağ bağlantısına sahip sunucuyu seçer.",
